[Rate Service] Separate deployment & service for Redis

--- a/helm/charts/bit-broker/config/ambassador/bit-broker-demo-config.yaml
+++ b/helm/charts/bit-broker/config/ambassador/bit-broker-demo-config.yaml
@@ -33,7 +33,7 @@ spec:
     ambassador:
       - consume:
         - remote_address
-        - x-bbk-policy:
+        - uid:
             header: "x-bbk-policy"
 ---
 apiVersion: getambassador.io/v2
@@ -48,5 +48,5 @@ spec:
     ambassador:
       - contribute:
         - remote_address
-        - x-bbk-policy:
+        - uid:
             header: "x-bbk-policy"
