--- a/helm/charts/rate-service/templates/deployment.yaml
+++ b/helm/charts/rate-service/templates/deployment.yaml
@@ -37,19 +37,8 @@ spec:
           - name: GO_ENV
             value: "production"
           - name: REDIS_ADDR
-            value: "localhost:6379"
+            value: "rate-service-redis:6379"
           - name: REDIS_PASSWORD
             value: ""
           - name: REDIS_DB
             value: "0"
-      - name: redis
-        image: "redis:latest"
-{{- if .Values.persistentVolume.enabled }}
-        volumeMounts:
-          - name: {{ .Release.Name }}-data
-            mountPath: '{{ .Values.persistentVolume.mountPath }}'
-      volumes:
-      - name: {{ .Release.Name }}-data
-        persistentVolumeClaim:
-          claimName: {{ .Release.Name }}-pvc
-{{- end }}
