Restructured charts: Phase 1

--- a/helm/charts/auth-service/templates/deployment.yaml
+++ b/helm/charts/auth-service/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
       - name: auth-service
         imagePullPolicy: {{ .Values.docker.imagePullPolicy }}
-        image: "{{ .Values.docker.registry }}/bbkr/auth-service:{{ .Values.docker.imageTag }}"
+        image: "{{ .Values.docker.registry }}/auth-service:{{ .Values.docker.imageTag }}"
         ports:
         - containerPort: 8080
         envFrom:
