--- a/helm/charts/rate-service/templates/deployment-redis.yaml
+++ b/helm/charts/rate-service/templates/deployment-redis.yaml
@@ -25,6 +25,6 @@ spec:
       volumes:
       - name: {{ .Release.Name }}-data
         persistentVolumeClaim:
-          claimName: {{ .Release.Name }}-pvc
+          claimName: {{ .Release.Name }}rate-service-pvc
 {{- end }}
 ---
