--- a/helm/charts/bit-broker-mockup/templates/configmap.yaml
+++ b/helm/charts/bit-broker-mockup/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: {{ .Release.Name }}-mockup-configmap
   namespace: '{{ .Release.Namespace }}'
 data:
   NODE_ENV: "{{ .Values.node_env }}"
