--- a/helm/charts/rate-service/templates/configmap.yaml
+++ b/helm/charts/rate-service/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: {{ .Release.Name }}-rate-service-configmap
   namespace: '{{ .Release.Namespace }}'
 data:
   LOG_LEVEL: "{{ .Values.logLevel }}"
