--- a/helm/charts/rate-service/templates/service.yaml
+++ b/helm/charts/rate-service/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-rate-service
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}-rate-service
     tier: backend
 spec:
   ports:
@@ -18,4 +18,4 @@ spec:
     targetPort: 7000
   type: ClusterIP
   selector:
-    app: {{ .Release.Name }}
+    app: {{ .Release.Name }}-rate-service
