Restructured charts: Phase 2: Integrate bitbroker coordianor, contributor, consumer and postgres db deployments to wwwin repo.

--- a/helm/charts/auth-service/templates/deployment.yaml
+++ b/helm/charts/auth-service/templates/deployment.yaml
@@ -27,6 +27,6 @@ spec:
         - containerPort: 8080
         envFrom:
           - configMapRef:
-              name: {{ .Release.Name }}-configmap
+              name: {{ .Release.Name }}-auth-service-configmap
           - secretRef:
               name: {{ .Release.Name }}-secret
