--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -1,3 +1,4 @@
+#######################################################################################
 # Set global values
 global:
   ory:
@@ -6,11 +7,139 @@ global:
         # Two possible modes are: controller or sidecar
         mode: controller
 
+#######################################################################################
+# coordinator  values
+coordinator:
+  replicaCount: 1
+  bbcoordinator:
+    name: coordinator
+    group: app
+    securityContext:
+      runAsUser: 1392
+      fsGroup: 1392
+    container:
+      image: public.ecr.aws/y1v9w5g2/bitbroker-coordinator:latest
+      name: coordinator
+      port: 8001
+    imagePullSecrets: ecrcred
+    imagePullPolicy: Always
+    service:
+      type: ClusterIP
+      port: 8001
+    volume:
+      name: bibroker-coordinator-storage
+      kind: PersistentVolumeClaim
+      mountPath: /home/node/app/services/coordinator/logs
+      pvc:
+        name: bibroker-coordinator-volume-claim
+        accessMode: ReadWriteOnce
+        storage: 4Gi
 
-imagePullSecrets:
- - name: "regcred"
+# End of coordinator values
+#######################################################################################
 
-# rate-service  values
+#######################################################################################
+# contributor  values
+
+bitbroker-contributor:
+  enabled: true
+  replicaCount: 1
+  bbcontributor:
+    name: contributor
+    group: app
+    securityContext:
+      runAsUser: 1392
+      fsGroup: 1392
+    container:
+      image: public.ecr.aws/y1v9w5g2/bitbroker-contributor:latest
+      name: bitbroker-contributor
+      port: 8001
+    imagePullSecrets: ecrcred
+    imagePullPolicy: Always
+    service:
+      type: ClusterIP
+      port: 8002
+    volume:
+      name: bibroker-contributor-storage
+      kind: PersistentVolumeClaim
+      mountPath: /home/node/app/services/contributor/logs
+      pvc:
+        name: bibroker-contributor-volume-claim
+        accessMode: ReadWriteOnce
+        storage: 4Gi
+
+
+# End of contributor values
+#######################################################################################
+
+#######################################################################################
+# consumer  values
+
+consumer:
+  enabled: true
+  replicaCount: 1
+  bbconsumer:
+    name: consumer
+    group: app
+    securityContext:
+      runAsUser: 1392
+      fsGroup: 1392
+    container:
+      image: public.ecr.aws/y1v9w5g2/bitbroker-consumer:latest
+      name: consumer
+      port: 8001
+    imagePullSecrets: ecrcred
+    imagePullPolicy: Always
+    service:
+      type: ClusterIP
+      port: 8002
+    volume:
+      name: bibroker-consumer-storage
+      kind: PersistentVolumeClaim
+      mountPath: /home/node/app/services/consumer/logs
+      pvc:
+        name: bibroker-consumer-volume-claim
+        accessMode: ReadWriteOnce
+        storage: 4Gi
+
+# End of consumer values
+#######################################################################################
+
+
+# bitbroker-db values
+
+bitbroker-db:
+  enabled: true
+  replicaCount: 1
+  postgres:
+    name: bitbroker-db
+    group: db
+    container:
+      image: public.ecr.aws/y1v9w5g2/bitbroker-db:latest
+      name: bitbroker-db
+      port: 5432
+    imagePullSecrets: ecrcred
+    service:
+      type: ClusterIP
+      port: 5432
+    volume:
+      name: postgres-storage
+      kind: PersistentVolumeClaim
+      mountPath: /var/lib/postgresql/data
+      subPath: postgres
+      pvc:
+        name: postgres-persistent-volume-claim
+        accessMode: ReadWriteOnce
+        storage: 4Gi
+
+  postgres_password: 'bitbr0ker'
+
+# End of bitbroker-db values
+#######################################################################################
+
+
+#######################################################################################
+# auth-service  values
 
 auth-service:
   enabled: true
@@ -38,6 +167,7 @@ auth-service:
 
 # End of auth-services values
 
+#######################################################################################
 # rate-service  values
 
 rate-service:
@@ -84,6 +214,8 @@ rate-service:
 
 # End of rate-service values
 
+#######################################################################################
+
 # bbk mockup values
 
 bbk-mockup-api:
@@ -104,6 +236,8 @@ bbk-mockup-api:
   ui_url: 'https://ui.bit-broker.eti-rolle-s1.ciscolabs.com'
 
 # End of bbk mockup values
+
+#######################################################################################
 
 # ambasadoor values
 ambassador:
@@ -630,6 +764,8 @@ ambassador:
 
 # End od ambasadoor values
 
+#######################################################################################
+
 # oathkeeper values
 oathKeeper:
   enabled: true
@@ -859,3 +995,5 @@ oathKeeper:
     enabled: true
 
 # End of oathkeeper values.
+
+#######################################################################################
