--- a/helm/charts/bit-broker/Chart.yaml
+++ b/helm/charts/bit-broker/Chart.yaml
@@ -17,7 +17,8 @@ dependencies:
   - name: oathkeeper
     version: "0.11.1"
     repository: https://k8s.ory.sh/helm/charts
-    condition: oathKeeper.enabled
+    condition: oathkeeper-bbk.enabled
+    alias: oathkeeper-bbk
   - name: auth-service
     version: "1.0"
     repository: file://../auth-service
