--- a/helm/charts/auth-service/templates/secret.yaml
+++ b/helm/charts/auth-service/templates/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-secret
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
   namespace: '{{ .Release.Namespace }}'
   labels:
-    release: {{ .Release.Name }}
+    release: {{ .Release.Name }}-{{ .Chart.Name }}
     heritage: {{ .Release.Service }}
 data:
   JWKS: {{ .Values.JWKS }}
