--- a/helm/charts/auth-service/templates/service.yaml
+++ b/helm/charts/auth-service/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/name: {{ .Release.Name }}
