--- a/helm/charts/auth-service/templates/configmap.yaml
+++ b/helm/charts/auth-service/templates/configmap.yaml
@@ -2,7 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-{{ .Chart.Name }}-configmap
-  namespace: '{{ .Release.Namespace }}'
+  labels:
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
   LOG_LEVEL: "{{ .Values.logLevel }}"
   ISSUER: "{{ .Values.issuer }}"
