--- a/helm/charts/auth-service/templates/secret.yaml
+++ b/helm/charts/auth-service/templates/secret.yaml
@@ -4,7 +4,8 @@ metadata:
   name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
   namespace: '{{ .Release.Namespace }}'
   labels:
-    release: {{ .Release.Name }}-{{ .Chart.Name }}
-    heritage: {{ .Release.Service }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
   JWKS: {{ .Values.JWKS }}
