--- a/helm/charts/rate-service/templates/service-redis.yaml
+++ b/helm/charts/rate-service/templates/service-redis.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-redis
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-redis
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}-redis
-    tier: backend
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   ports:
   - name: http
@@ -13,4 +14,4 @@ spec:
     port: 6379
   type: ClusterIP
   selector:
-    app: {{ .Release.Name }}-redis
+    app: {{ .Release.Name }}-{{ .Chart.Name }}
