--- a/helm/charts/auth-service/templates/configmap.yaml
+++ b/helm/charts/auth-service/templates/configmap.yaml
@@ -8,4 +8,4 @@ metadata:
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
   LOG_LEVEL: "{{ .Values.logLevel }}"
-  ISSUER: "{{ .Values.issuer }}"
+  ISSUER: "{{ .Values.issuer | default .Values.global.issuer }}"
