--- a/helm/charts/contributor/templates/configmap.yaml
+++ b/helm/charts/contributor/templates/configmap.yaml
@@ -1,5 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-contributor-configmap
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-configmap
   namespace: '{{ .Release.Namespace }}'
+  labels:
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+data:
+  LOG_LEVEL: "{{ .Values.logLevel }}"
