--- a/helm/charts/bit-broker-mockup/templates/deployment.yaml
+++ b/helm/charts/bit-broker-mockup/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: {{ .Release.Name }}
         imagePullPolicy: {{ .Values.docker.imagePullPolicy }}
-        image: "{{ .Values.docker.registry }}/auth-service:{{ .Values.docker.imageTag }}"
+        image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/auth-service:{{ .Values.docker.imageTag }}"
         ports:
         - containerPort: 8080
         envFrom:
