--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -17,7 +17,7 @@ global:
   docker:
     ## If private registry
     ##
-    #registry: ""
+    registry: "registry.eti-rolle.ciscolabs.com:5000"
 
   ## Token's issuer
   ##
