--- a/helm/charts/bitbroker-db/templates/configmap.yaml
+++ b/helm/charts/bitbroker-db/templates/configmap.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-db-configmap
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-configmap
   namespace: '{{ .Release.Namespace }}'
   labels:
-    group: {{ .Values.postgres.group }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
-  POSTGRES_PASSWORD: "{{ .Values.postgres_password }}"
+  LOG_LEVEL: "{{ .Values.logLevel }}"
