--- a/helm/charts/bitbroker-db/templates/deployment.yaml
+++ b/helm/charts/bitbroker-db/templates/deployment.yaml
@@ -1,10 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.postgres.name }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
+  namespace: '{{ .Release.Namespace }}'
   labels:
-    app: {{ .Values.postgres.name }}
-    group: {{ .Values.postgres.group }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -17,7 +19,7 @@ spec:
         group: {{ .Values.postgres.group }}
     spec:
       volumes:
-        - name: {{ .Values.postgres.volume.name }}
+        - name: {{ .Release.Name }}-{{ .Chart.Name }}-vol
           persistentVolumeClaim:
             claimName: {{ .Values.postgres.volume.pvc.name }}
       containers:
@@ -31,7 +33,7 @@ spec:
             - containerPort: {{ .Values.postgres.container.port }}
           envFrom:
             - configMapRef:
-                name: {{ .Release.Name }}-db-configmap
+                name: {{ .Release.Name }}-{{ .Chart.Name }}-configmap
           volumeMounts:
             - name: {{ .Values.postgres.volume.name }}
               mountPath: {{ .Values.postgres.volume.mountPath }}
