--- a/helm/charts/bitbroker-db/templates/pvc.yaml
+++ b/helm/charts/bitbroker-db/templates/pvc.yaml
@@ -1,7 +1,11 @@
 apiVersion: v1
-kind: {{ .Values.postgres.volume.kind }}
+kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.postgres.volume.pvc.name }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-pvc
+  labels:
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   accessModes:
     - {{ .Values.postgres.volume.pvc.accessMode }}
