--- a/helm/charts/bitbroker-db/templates/service.yaml
+++ b/helm/charts/bitbroker-db/templates/service.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.postgres.name }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-svc
   labels:
-    group: {{ .Values.postgres.group }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   type: {{ .Values.postgres.service.type }}
   selector:
