[Chart] Replace service with name

--- a/helm/charts/bit-broker/templates/ambassador-config.yaml
+++ b/helm/charts/bit-broker/templates/ambassador-config.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
-  auth_service: {{ .Release.Service }}-oathkeeper-bbk-api:4456
+  auth_service: {{ .Release.Name }}-oathkeeper-bbk-api:4456
   timeout_ms: 5000
   failure_mode_allow: false
   path_prefix: "/decisions/bbk"
@@ -29,7 +29,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
-  service: {{ .Release.Service }}-rate-service:7000
+  service: {{ .Release.Name }}-rate-service:7000
   protocol_version: v2
 ---
 apiVersion: getambassador.io/v2
