--- a/helm/charts/consumer/templates/pvc.yaml
+++ b/helm/charts/consumer/templates/pvc.yaml
@@ -1,10 +1,14 @@
 apiVersion: v1
-kind: {{ .Values.bbconsumer.volume.kind }}
+kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.bbconsumer.volume.pvc.name }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-pvc
+  labels:
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   accessModes:
-    - {{ .Values.bbconsumer.volume.pvc.accessMode }}
+    - {{ .Values.volume.pvc.accessMode }}
   resources:
     requests:
-      storage: {{ .Values.bbconsumer.volume.pvc.storage }}
+      storage: {{ .Values.volume.pvc.storage }}
