--- a/helm/charts/consumer/values.yaml
+++ b/helm/charts/consumer/values.yaml
@@ -1,24 +1,32 @@
+## Default values for consumer helm templates.
+
+name: consumer
+group: app
+
+##consumer instance count.
 replicaCount: 1
-bbconsumer:
+
+##consumer security context configuration.
+securityContext:
+  runAsUser: 1392
+  fsGroup: 1392
+
+##Docker Image values.
+container:
+  image: public.ecr.aws/y1v9w5g2/consumer:latest
   name: consumer
-  group: app
-  securityContext:
-    runAsUser: 1392
-    fsGroup: 1392
-  container:
-    image: public.ecr.aws/y1v9w5g2/bitbroker-consumer:latest
-    name: bitbroker-consumer
-    port: 8001
-  imagePullSecrets: ecrcred
-  imagePullPolicy: Always
-  service:
-    type: ClusterIP
-    port: 8002
-  volume:
-    name: bibroker-consumer-storage
-    kind: PersistentVolumeClaim
-    mountPath: /home/node/app/services/consumer/logs
-    pvc:
-      name: bibroker-consumer-volume-claim
-      accessMode: ReadWriteOnce
-      storage: 4Gi
+  port: 8001
+imagePullSecrets: ecrcred
+imagePullPolicy: Always
+
+## Service configuration values.
+service:
+  type: ClusterIP
+  port: 8001
+
+## Volume definitions.
+volume:
+  mountPath: /home/node/app/services/consumer/logs
+  pvc:
+    accessMode: ReadWriteOnce
+    storage: 4Gi
