--- a/helm/charts/bit-broker-mockup/templates/service.yaml
+++ b/helm/charts/bit-broker-mockup/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-mockup
+  name: {{ .Release.Name }}
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}-mockup
+    app.kubernetes.io/name: {{ .Release.Name }}
     tier: backend
 spec:
   ports:
@@ -14,4 +14,4 @@ spec:
     targetPort: 8080
   type: ClusterIP
   selector:
-    app: {{ .Release.Name }}-mockup
+    app: {{ .Release.Name }}
