--- a/helm/charts/coordinator/values.yaml
+++ b/helm/charts/coordinator/values.yaml
@@ -12,12 +12,15 @@ securityContext:
   fsGroup: 1392
 
 ##Docker Image values.
+docker:
+  imageTag: "latest"
+  imagePullPolicy: Always
+  imagePullSecret: regcred
+
 container:
-  image: public.ecr.aws/y1v9w5g2/coordinator:latest
   name: coordinator
   port: 8001
-imagePullSecrets: ecrcred
-imagePullPolicy: Always
+
 
 ## Service configuration values.
 service:
