--- a/helm/charts/bit-broker-mockup/templates/configmap.yaml
+++ b/helm/charts/bit-broker-mockup/templates/configmap.yaml
@@ -1,8 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-mockup-configmap
+  name: {{ .Release.Name }}-configmap
   namespace: '{{ .Release.Namespace }}'
+  labels:
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
   NODE_ENV: "{{ .Values.node_env }}"
   LOG_LEVEL: "{{ .Values.log_level }}"
