--- a/helm/charts/bit-broker-mockup/templates/service.yaml
+++ b/helm/charts/bit-broker-mockup/templates/service.yaml
@@ -4,8 +4,9 @@ metadata:
   name: {{ .Release.Name }}
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}
-    tier: backend
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
   ports:
   - name: http
